--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     color: #ffffff;
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 
 .cabecalho-imagem {
@@ -15,5 +16,6 @@
 }
 
 .cabecalho-lista-item {
-    display: inline-block;     
+    display: inline-block;
+    margin: 0 16px;     
 }
