ajuste cor do cabeçalho

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 .cabecalho {
-    background-color: #799CF8;
+    background-color: #0C1733;
     color: #ffffff;
     display: flex;
     justify-content: space-around;
