--- a/style.css
+++ b/style.css
@@ -23,4 +23,16 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    display: inline-block;
+    margin: 0 20px;
+}
+
+.imagem-titulo {
+    width: 50%;
+    height: 50%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    display: inline-block;
+    margin: 0 20px;
 }
