--- a/style.css
+++ b/style.css
@@ -21,18 +21,18 @@
 }
 .edutech-titulo {
     display: flex;
-    justify-content: space-around;
+    justify-content:center
     align-items: center;
     display: inline-block;
-    margin: 0 20px;
+    margin: 20 20px;
 }
 
 .imagem-titulo {
     width: 5%;
     height: 5%;
     display: flex;
-    justify-content: space-around;
+    justify-content:center
     align-items: center;
     display: inline-block;
-    margin: 0 20px;
+    margin: 20 20px;
 }
