--- a/style.css
+++ b/style.css
@@ -17,7 +17,17 @@
 
 .cabecalho-lista-item {
     display: inline-block;
-    margin: 0 20px;     
+    margin: 0 20px;
+    
+.edutech {
+    background-image: -o-linear-gradient(#0C1733, #1C2B52);
+    color: white;
+    display: flex; 
+}
+
+.edutech-div-conteudo {
+    width: 35%;
+}
 }
 .edutech-titulo {
     display: flex;
