--- a/style.css
+++ b/style.css
@@ -18,11 +18,18 @@
 .cabecalho-lista-item {
     display: inline-block;
     margin: 0 20px;
+
+.edutech-imagem {
+    width: 20%;
+    }
     
 .edutech{
     background-image: linear-gradient(#0C1733, #1C2B52);
     color: white;
-    display: flex; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0; 
 }
 
 .edutech-div-conteudo{
@@ -30,11 +37,7 @@
 }
 
 .edutech-titulo {
-    display: flex;
-    justify-content:center
-    align-items: center;
-    display: inline-block;
-    margin: 20 20px;
+    padding: 24px 0;
 }
 
 .imagem-titulo {
@@ -47,6 +50,3 @@
     margin: 20 20px;
 }
 
-.edutech-imagem {
-    width: 20%;
-}
