--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 }
 
 .edutech-imagem{
-    width: 20%;
+    width: 15%;
 }
     
 .edutech{
@@ -45,7 +45,7 @@
     width: 5%;
     height: 5%;
     display: flex;
-    justify-content:center;
+    justify-content:space-around;
     align-items: center;
     display: inline-block;
     margin: 20 20px;
