--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     margin: 0;
     padding: 0;
 }
+
+body{
+    font-family: 'Poppins', sans-serif;
+}
 .cabecalho {
     background-color: #0C1733;
     color: #ffffff;
