atualização espaçamento título

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ body{
     padding: 24px 0;
     display: inline-block;
     justify-content:space-around;
+    margin: 0 20px;
 }
 
 .imagem-titulo {
@@ -53,5 +54,6 @@ body{
     display: inline-block;
     justify-content:space-around;
     align-items: center;
+    margin: 0 20px;
 }
 
