--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body{
 }
     
 .edutech{
-    background-image: linear-gradient(#0C1733, #1C2B52);
+    background-image: linear-gradient(#0C1733, #fff);
     color: white;
     display: flex;
     justify-content: center;
