--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body{
 }
     
 .edutech{
-    background-image: linear-gradient(#0C1733, #787397);
+    background-image: linear-gradient(#0C1733, #d4d3da);
     color: white;
     display: flex;
     justify-content: center;
