Cor seção Estudante

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body{
     
 .edutech{
     background-image: linear-gradient(#0C1733, #d4d3da);
-    color: #d4d3da;
+    color: #ffffff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -61,6 +61,11 @@ body{
     padding: 24px 0;
 }
 
+.estudante {
+    background-color: #d4d3da;
+}
+
+
 .estudante-imagem {
     width: 120px;
 }
@@ -83,4 +88,5 @@ body{
     grid-template-columns: 20% 20% 20% 20% 20%;
     padding-bottom: 40px;
 }
+
 
