--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body{
 }
     
 .edutech{
-    background-image: linear-gradient(#0C1733, #d4d3da);
+    background-image: linear-gradient(#0C1733, #acbeec);
     color: #ffffff;
     display: flex;
     justify-content: center;
@@ -62,7 +62,7 @@ body{
 }
 
 .estudante {
-    background-image: linear-gradient(#d4d3da, #d4d3da);
+    background-image: linear-gradient(#acbeec, #d4d3da);
 }
 
 
