--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body{
 }
 
 .estudante {
-    background-image: linear-gradient(#acbeec, #d4d3da);
+    background-image: linear-gradient(#acbeec, #acbeec);
 }
 
 
