--- a/style.css
+++ b/style.css
@@ -24,12 +24,16 @@ body{
     margin: 0 20px;
 }
 
+.pagina {
+    background-image: linear-gradient(#0C1733, #acbeec);
+}
+
 .edutech-imagem{
     width: 15%;
 }
     
 .edutech{
-    background-image: linear-gradient(#0C1733, #acbeec);
+    /*background-image: linear-gradient(#0C1733, #acbeec);*/
     color: #ffffff;
     display: flex;
     justify-content: center;
@@ -62,7 +66,7 @@ body{
 }
 
 .estudante {
-    background-image: linear-gradient(#acbeec, #acbeec);
+    /*background-image: linear-gradient(#acbeec, #acbeec);*/
 }
 
 
